--- a/css/style_tableCell.css
+++ b/css/style_tableCell.css
@@ -16,20 +16,20 @@
   border-radius: 10px;
 }
 
-.element1 {
+.element-start-one {
   background: rgb(243, 152, 7);
 }
 
-.element2 {
+.element-start-two {
   background: rgb(236, 15, 52);
 }
 
-.element3 {
+.element-start-three {
   background: rgb(32, 233, 32);
 }
 
 .container {
-  background: turquoise;
+  background: rgb(60, 201, 187);
   border: 1px solid white;
   width: 180px;
   height: 180px;
@@ -37,98 +37,93 @@
   color: white;
 }
 
-.container1,
-.container2,
-.container3,
-.container4,
-.container5,
-.container6,
-.container7,
-.container8,
-.container9 {
+.container-start-one,
+.container-start-two,
+.container-start-three,
+.container-start-four,
+.container-start-five,
+.container-start-six,
+.container-start-seven,
+.container-start-eight,
+.container-start-nine {
   display: table-cell;
 }
 
 /* table cell end */
-.element {
-  width: 60px;
-  height: 60px;
-  text-align: center;
-  padding-top: 10px;
-  box-sizing: border-box;
-}
 
-.element1 {
-  background: papayawhip;
+.element-one {
+  background: rgb(240, 34, 62);
   display: inline-block;
 }
 
-.element2 {
-  background: pink;
+.element-two {
+  background: rgb(74, 221, 111);
   display: inline-block;
 }
 
-.element3 {
-  background: lightcyan;
+.element-three {
+  background: rgb(233, 76, 14);
   display: inline-block;
 }
 
-.container {
-  background: turquoise;
+.container-end {
+  background: rgb(197, 72, 255);
   border: 1px solid white;
   width: 180px;
   height: 180px;
+  border-radius: 10px;
+  color: white;
 }
 
-.container1 {
+.container-one {
   display: table-cell;
   text-align: left;
   vertical-align: top;
 }
 
-.container2 {
+.container-two {
   display: table-cell;
   text-align: left;
   vertical-align: middle;
 }
 
-.container3 {
+.container-three {
   display: table-cell;
   text-align: left;
   vertical-align: bottom;
 }
 
-.container4 {
+.container-four {
   display: table-cell;
   text-align: center;
   vertical-align: top;
 }
 
-.container5 {
+.container-five {
   display: table-cell;
   text-align: center;
   vertical-align: middle;
 }
 
-.container6 {
+.container-six {
   display: table-cell;
   text-align: center;
   vertical-align: bottom;
 }
 
-.container7 {
+.container-seven {
   display: table-cell;
   text-align: right;
   vertical-align: top;
 }
 
-.container8 {
+.container-eight {
   display: table-cell;
   text-align: right;
   vertical-align: middle;
 }
 
-.container9 {
+.container-nine {
   display: table-cell;
   text-align: right;
   vertical-align: bottom;
