--- a/css/align-content.css
+++ b/css/align-content.css
@@ -87,6 +87,17 @@
   gap: 10px;
 }
 
+.container_seven {
+  background: papayawhip;
+  display: grid;
+  grid-template-columns: repeat(3, 60px);
+  grid-template-rows: auto;
+  width: 180px;
+  height: 180px;
+  align-content: stretch;
+  gap: 10px;
+}
+
 .item {
   background: papayawhip;
   border: 4px solid hotpink;
