--- a/css/style_margin.css
+++ b/css/style_margin.css
@@ -15,7 +15,7 @@
 }
 
 .button_submit {
-  background-color: rgb(241, 59, 135);
+  background-color: #f12b6b;
   width: 250px;
   height: 50px;
   outline: none;
