--- a/css/layout-grid.css
+++ b/css/layout-grid.css
@@ -8,14 +8,36 @@ body {
 }
 
 .header {
-  background: crimson;
+  display: grid;
+  grid-template-columns: 100px repeat(2, 1fr);
+  background: #fffdf9;
+  width: 100%;
   height: 50px;
+  position: fixed;
+  box-shadow: 0px 7px 8px -8px #cdc9c3;
+}
+
+.header img {
+  width: 30px;
+  margin: 12px;
+}
+
+.header p {
+font-size: x-large;
+margin: 10px 0;
+}
+
+.icon {
+  color: #bccddf;
+  font-size: 24px;
+  text-align: right;
+  margin: 10px;
 }
 
 .main {
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   gap: 15px;
-  padding: 20px;
+  padding: 70px 20px 20px;
 }
 
 .item-1 {
@@ -290,33 +312,52 @@ body {
 }
 
 .color-49 {
-  background: #0e9aa7;
+  background: #00b8a9;
   height: 90px;
   border-radius: 5px 5px 0 0;
 }
 
 .color-50 {
-  background: #3da4ab;
+  background: #f8f3d4;
   height: 55px;
 }
 
 .color-51 {
-  background: #f6cd61;
+  background: #f6416c;
   height: 45px;
 }
 
 .color-52 {
-  background: #fe8a71;
+  background: #ffde7d;
   height: 35px;
   border-radius: 0 0 5px 5px;
 }
 
 .margin-btn {
-  margin-top: 10px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .btn-main {
   border: none;
-  padding: 10px 15px;
   border-radius: 5px;
+  margin-top: 12px;
+  width: 80px;
+  height: 35px;
+  outline: none;
+
+}
+.btn-main:hover{
+  border: 1px solid #dfd3d3;
+  background-color: #ebfffa;
+  transition: color 0.2s 0.05s ease;
+  transition: background-color 0.2s 0.05s ease;
+  cursor: pointer;
+  color: #f73859;
+}
+
+.margin-btn p{
+  color: #838383;
+  text-align: right;
+  margin-top: 20px;
 }
