--- a/css/layout-grid.css
+++ b/css/layout-grid.css
@@ -9,7 +9,7 @@ body {
 
 .header {
   display: grid;
-  grid-template-columns: 100px repeat(2, 1fr);
+  grid-template-columns: 100px 1fr 100px;
   background: #fffdf9;
   width: 100%;
   height: 50px;
@@ -20,11 +20,23 @@ body {
 .header img {
   width: 30px;
   margin: 12px;
+  animation: roll 3s infinite;
+  transform: rotate(30deg);
+}
+
+@keyframes roll {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .header p {
 font-size: x-large;
 margin: 10px 0;
+text-align: center;
 }
 
 .icon {
@@ -32,6 +44,11 @@ margin: 10px 0;
   font-size: 24px;
   text-align: right;
   margin: 10px;
+}
+
+.icon:hover{
+  color: #900c3f;
+  cursor: pointer;
 }
 
 .main {
