--- a/css/style_margin.css
+++ b/css/style_margin.css
@@ -1,11 +1,3 @@
-.title {
-  background: rgb(255, 71, 71);
-  color: white;
-  border-radius: 10px;
-  text-align: center;
-  font-size: 20px;
-}
-
 .container_menu {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -40,14 +32,14 @@
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 5px;
   font-family: "Lato", sans-serif;
-  width: 550px;
+  width: 400px;
   color: white;
   float: left;
-  padding-left: 5%;
+  padding: 0 5% 3% 5%;
 }
 
 .container-margin-start {
-  background: rgb(224, 160, 64);
+  background: #b21f66;
   width: 180px;
   height: 180px;
   border-radius: 10px;
@@ -65,19 +57,19 @@
 .element-one-margin-start,
 .element-two-margin-start,
 .element-three-margin-start {
-  background: rgb(248, 15, 170);
+  background: #50d890;
 }
 
 .element-four-margin-start,
 .element-five-margin-start,
 .element-six-margin-start {
-  background: rgb(47, 230, 87);
+  background: #f8b400;
 }
 
 .element-seven-margin-start,
 .element-eight-margin-start,
 .element-nine-margin-start {
-  background: rgb(28, 235, 235);
+  background: #fa163f;
 }
 
 /* Grid margin end */
@@ -92,53 +84,53 @@
 }
 
 .container-margin-end {
-  background: turquoise;
+  background: #fe9801;
   width: 180px;
   height: 180px;
   border-radius: 10px;
 }
 
 .element-one-margin {
-  background: rgb(144, 60, 255);
+  background: #8b2f97;
   margin: 0;
 }
 
 .element-two-margin {
-  background: rgb(144, 60, 255);
+  background: #8b2f97;
   margin: 60px 0;
 }
 
 .element-three-margin {
-  background: rgb(144, 60, 255);
+  background: #8b2f97;
   margin: 120px 0;
 }
 
 .element-four-margin {
-  background: rgb(180, 11, 39);
+  background: #0c9463;
   margin: 0 auto;
 }
 
 .element-five-margin {
-  background: rgb(180, 11, 39);
+  background: #0c9463;
   margin: 60px auto;
 }
 
 .element-six-margin {
-  background: rgb(180, 11, 39);
+  background: #0c9463;
   margin: 120px auto;
 }
 
 .element-seven-margin {
-  background: rgb(253, 228, 4);
+  background: #eb4d55;
   margin: 0 0 0 auto;
 }
 
 .element-eight-margin {
-  background: rgb(253, 228, 4);
+  background: #eb4d55;
   margin: 60px 0 0 auto;
 }
 
 .element-nine-margin {
-  background: rgb(253, 228, 4);
+  background: #eb4d55;
   margin: 120px 0 0 auto;
 }
