--- a/css/justify-content.css
+++ b/css/justify-content.css
@@ -1,16 +1,10 @@
-.title {
-  background: rgb(255, 71, 71);
-  color: white;
-  border-radius: 10px;
-  text-align: center;
-  font-size: 20px;
-}
-
 .grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto;
   gap: 10px;
+  padding-top: 75px;
+  justify-items: center;
 }
 
 .grid-container {
