--- a/css/tracks.css
+++ b/css/tracks.css
@@ -1,11 +1,3 @@
-.title {
-  background: rgb(255, 71, 71);
-  color: white;
-  border-radius: 10px;
-  text-align: center;
-  font-size: 20px;
-}
-
 .container {
   display: grid;
   /* grid-template-columns: 60px; */
@@ -13,8 +5,9 @@
   /* grid-auto-flow: column; */
   /* grid-template-rows: 90px 90px; */
   grid-auto-rows: 60px;
-  margin: 10px 80px;
+  margin: 0 80px;
   gap: 10px;
+  padding-top: 75px;
 }
 
 .item-a {
