--- a/css/style_position.css
+++ b/css/style_position.css
@@ -6,7 +6,7 @@
   font-family: "Lato", sans-serif;
   width: 550px;
   float: left;
-  padding-left: 5%;
+  padding: 75px 0 0 5%;
   padding-bottom: 10px;
 }
 
