--- a/css/place-self.css
+++ b/css/place-self.css
@@ -1,15 +1,19 @@
 .container {
+  padding-top: 75px;
+  text-align: center;
+}
+
+.items {
   background: papayawhip;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  width: 100px;
-  height: 100px;
+  width: 300px;
+  height: 300px;
   margin: 0 100px;
-  /* padding-top: 350px;
-  justify-items: center; */
 }
 
 .item:nth-child(1) {
+  height: 50px;
   background: hotpink;
   place-self: center stretch;
 }
