--- a/css/auto-fill-fit.css
+++ b/css/auto-fill-fit.css
@@ -1,7 +1,10 @@
+.container {
+  padding: 75px;
+}
+
 .grid-container {
   display: grid;
-  padding-top: 75px;
-  margin: 0 2em;
+  padding: 15px 0;
 }
 
 .grid-container--fill {
@@ -17,12 +20,4 @@
   padding: 20px;
   color: #fff;
   border: 1px solid #fff;
-}
-
-/* body {
-  padding: 0 2em 2em 2em;
-} */
-
-hr {
-  margin: 80px;
 }
