--- a/css/columns-rows.css
+++ b/css/columns-rows.css
@@ -1,9 +1,15 @@
 .container {
+  display: flex;
+  padding-top: 75px;
+  justify-content: center;
+  align-items: center;
+}
+
+.container_item {
   display: inline-grid;
   grid-template: repeat(3, 60px) / repeat(3, 60px);
   background: rgb(255, 239, 12);
   border-radius: 10px;
-  margin-left: 20%;
 }
 
 .item {
