--- a/css/justify-self.css
+++ b/css/justify-self.css
@@ -1,5 +1,8 @@
 .container {
+  display: flex;
   padding-top: 75px;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
