--- a/css/quiz-place-content.css
+++ b/css/quiz-place-content.css
@@ -1,11 +1,17 @@
 .container {
+  display: flex;
+  padding-top: 75px;
+  justify-content: center;
+  align-items: center;
+}
+
+.container_item {
   height: 200px;
   width: 200px;
   background: tomato;
   display: grid;
   place-items: center;
   border-radius: 10px;
-  margin-left: 20%;
 }
 
 .item {
