Se añadio el header a las vistas restantes

--- a/css/content_item.css
+++ b/css/content_item.css
@@ -1,4 +1,9 @@
 .container {
+  padding: 75px;
+  text-align: center;
+}
+
+.container_item {
   background: purple;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
