--- a/css/location.css
+++ b/css/location.css
@@ -1,15 +1,22 @@
 body {
   background: rgb(255, 217, 182);
 }
+
+.container_main {
+  display: block;
+  padding-top: 75px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
 .container {
-  background: khaki;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  background: khaki;
   width: 200px;
-  margin-left: 40px;
   float: left;
-  margin: 0 60px 0 40px;
-  text-align: center;
+  margin: 0 25px;
 }
 
 .item {
@@ -26,9 +33,8 @@ body {
   grid-template-areas:
     "card-1 card-2"
     "card-1 card-3";
-  width: 100vh;
   height: 30vh;
-  text-align: center;
+  margin: 0 25px;
 }
 
 .item_1 {
@@ -52,10 +58,10 @@ body {
   grid-template-areas:
     "card1 card2"
     "card1 card3";
-  width: 400px;
-  height: 400px;
+  width: 350px;
+  height: 350px;
   float: left;
-  margin: 0 60px 0 40px;
+  margin: 25px;
 }
 
 .item-one {
@@ -89,6 +95,7 @@ body {
   grid-template-areas:
     "card1 card2"
     "card3 card3";
-  width: 400px;
-  height: 400px;
+  width: 350px;
+  height: 350px;
+  margin: 25px;
 }
