--- a/css/mode_challenge.css
+++ b/css/mode_challenge.css
@@ -1,6 +1,9 @@
 .container {
+  display: flex;
   padding-top: 75px;
-  margin: 15px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .card {
