--- a/css/header.css
+++ b/css/header.css
@@ -46,3 +46,12 @@ body {
   color: #900c3f;
   cursor: pointer;
 }
+
+@media (max-width: 575.98px) {
+  .header {
+    grid-template-columns: 50px 1fr 50px;
+  }
+  .header p {
+    font-size: larger;
+  }
+}
