--- a/css/style_margin.css
+++ b/css/style_margin.css
@@ -1,13 +1,13 @@
 .container_menu {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  justify-content: center;
   gap: 30px;
   padding-top: 75px;
+  margin: 0 10%;
 }
 
 .button_submit {
-  background-color: #f12b6b;
+  background: #f12b6b;
   width: 250px;
   height: 50px;
   outline: none;
@@ -15,14 +15,13 @@
   border: none;
   float: left;
   color: white;
-  font-size: medium;
+  font-size: 16px;
   box-shadow: 5px 10px 18px red;
 }
 
 .button_submit:hover {
   background-color: #ff2929;
   transition: color 0.2s 0.05s ease;
-  transition: background-color 0.2s 0.05s ease;
   cursor: pointer;
 }
 
@@ -134,4 +133,16 @@
 .element-nine-margin {
   background: #eb4d55;
   margin: 120px 0 0 auto;
+}
+
+@media (max-width: 575.98px) {
+  .container_menu {
+    grid-template-columns: 1fr;
+    justify-items: center;
+    margin: 0;
+  }
+
+  .button_submit {
+    width: 40vh;
+  }
 }
