Alineando contenido en vista movil alight-justify

--- a/css/align-content.css
+++ b/css/align-content.css
@@ -98,3 +98,34 @@
   height: 30px;
   width: 30px;
 }
+
+@media (max-width: 575.98px) {
+  .grid {
+    grid-template-columns: 1fr;
+    margin: 0 15px;
+    padding-bottom: 10em;
+  }
+
+  .grid-container {
+    width: 300px;
+    height: 300px;
+  }
+
+  .container,
+  .container_two,
+  .container_three,
+  .container_four,
+  .container_five,
+  .container_six,
+  .container_seven {
+    grid-template-columns: repeat(3, 83px);
+    width: 270px;
+    height: 270px;
+    justify-items: center;
+  }
+
+  .item {
+    height: 50px;
+    width: 50px;
+  }
+}
