--- a/css/hairstyle.css
+++ b/css/hairstyle.css
@@ -43,7 +43,7 @@ body {
   position: absolute;
   width: 400px;
   height: 400px;
-  top: 370px;
+  top: 390px;
   transform: rotate(180deg);
 }
 
@@ -54,15 +54,16 @@ body {
   border-radius: 100px;
   position: relative;
   box-shadow: 0px 0px 3px 1px var(--skin);
+  left: -40px;
 }
 
 .ear_right {
   width: 40px;
   height: 40px;
   background: var(--ear);
-  position: absolute;
-  top: 210px;
-  left: 398px;
+  position: relative;
+  top: -65px;
+  left: 180px;
   border-radius: 50%;
   box-shadow: 0px 0px 1px 1px var(--ear);
 }
@@ -71,9 +72,9 @@ body {
   width: 40px;
   height: 40px;
   background: var(--ear);
-  position: absolute;
-  top: 210px;
-  left: 190px;
+  position: relative;
+  top: -65px;
+  left: 18px;
   border-radius: 50%;
   box-shadow: 0px 0px 1px 1px var(--ear);
 }
@@ -209,4 +210,21 @@ body {
   transform: rotate(155.5deg);
   border-radius: 90% 60% 60% 90% / 80% 80% 60% 60%;
   box-shadow: 0px 0px 2px 1px #91163d;
+}
+
+@media (max-width: 575.98px) {
+  .container {
+    background: none;
+  }
+
+  .square {
+    clip-path: none;
+    height: 100vh;
+    border-radius: 4px;
+  }
+
+  .body {
+    width: 500px;
+    top: 480px;
+  }
 }
