--- a/css/justify-content.css
+++ b/css/justify-content.css
@@ -86,3 +86,32 @@
   background: papayawhip;
   border: 4px solid hotpink;
 }
+
+@media (max-width: 575.98px) {
+  .grid {
+    grid-template-columns: 1fr;
+    margin: 0 15px;
+    padding-bottom: 1em;
+  }
+
+  .grid-container,
+  .grid-container_two,
+  .grid-container_three,
+  .grid-container_four {
+    width: 300px;
+    height: 300px;
+  }
+
+  .container {
+    width: 150px;
+    height: 150px;
+  }
+
+  .container_two,
+  .container_three,
+  .container_four {
+    width: 280px;
+    height: 280px;
+    gap: 40px;
+  }
+}
