--- a/css/style_margin.css
+++ b/css/style_margin.css
@@ -29,7 +29,7 @@
 .wrapper-start {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 5px;
+  gap: 5px;
   font-family: "Lato", sans-serif;
   color: white;
   float: left;
@@ -75,7 +75,7 @@
 .wrapper-end {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 5px;
+  gap: 5px;
   font-family: "Lato", sans-serif;
   padding-top: 75px;
   float: left;
@@ -144,5 +144,52 @@
 
   .button_submit {
     width: 40vh;
+  }
+
+  .wrapper-start,
+  .wrapper-end {
+    justify-content: center;
+    justify-items: center;
+    font-size: 14px;
+    margin: 0 10px;
+  }
+
+  .wrapper-end {
+    padding-top: 25px;
+    padding-bottom: 2em;
+  }
+  .container-margin-start,
+  .container-margin-end {
+    width: 110px;
+    height: 110px;
+  }
+
+  .element {
+    width: 50px;
+    height: 50px;
+  }
+
+  .element-two-margin {
+    margin: 30px 0;
+  }
+
+  .element-three-margin {
+    margin: 60px 0;
+  }
+
+  .element-five-margin {
+    margin: 30px auto;
+  }
+
+  .element-six-margin {
+    margin: 60px auto;
+  }
+
+  .element-eight-margin {
+    margin: 30px 0 0 auto;
+  }
+
+  .element-nine-margin {
+    margin: 60px 0 0 auto;
   }
 }
