--- a/css/drawing.css
+++ b/css/drawing.css
@@ -194,3 +194,15 @@ body {
   left: 8px;
   border-radius: 50%;
 }
+
+@media (max-width: 575.98px) {
+  body {
+    background: none;
+  }
+
+  .square {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+  }
+}
