--- a/css/style_flexbox.css
+++ b/css/style_flexbox.css
@@ -121,3 +121,19 @@
   justify-content: flex-end;
   align-items: flex-end;
 }
+
+@media (max-width: 575.98px) {
+  .wrapper {
+    justify-content: center;
+    justify-items: center;
+    font-size: 14px;
+    width: min-content;
+    padding: 75px 30px 0 30px;
+  }
+
+  .container,
+  .container-end {
+    width: 100px;
+    height: 100px;
+  }
+}
