--- a/css/style_margin.css
+++ b/css/style_margin.css
@@ -151,7 +151,7 @@
     justify-content: center;
     justify-items: center;
     font-size: 14px;
-    margin: 0 10px;
+    float: none;
   }
 
   .wrapper-end {
@@ -168,6 +168,7 @@
   .element {
     width: 50px;
     height: 50px;
+    padding-top: 5px;
   }
 
   .element-two-margin {
