--- a/css/location.css
+++ b/css/location.css
@@ -99,3 +99,10 @@ body {
   height: 350px;
   margin: 25px;
 }
+
+@media (max-width: 575.98px) {
+  .container_two,
+  .container_three {
+    margin: 5px;
+  }
+}
