--- a/css/mode_challenge.css
+++ b/css/mode_challenge.css
@@ -59,3 +59,10 @@
   background: #29ebc7;
   padding: 20px;
 }
+
+@media (max-width: 575.98px) {
+  .container {
+    display: grid;
+    gap: 15px;
+  }
+}
