Medium devices and Large devices

--- a/css/style_tableCell.css
+++ b/css/style_tableCell.css
@@ -130,7 +130,11 @@
 
 @media (max-width: 575.98px) {
   .container_main {
-    display: block;
     margin: 0;
+  }
+
+  .container,
+  .container-end {
+    height: 120px;
   }
 }
