--- a/css/mode_challenge.css
+++ b/css/mode_challenge.css
@@ -65,4 +65,10 @@
     display: grid;
     gap: 15px;
   }
+  .card,
+  .card_alignments,
+  .card_alignments_three,
+  .card_alignments_four {
+    margin: 20px;
+  }
 }
