--- a/css/style_margin.css
+++ b/css/style_margin.css
@@ -198,3 +198,28 @@
     margin: 60px 0 0 auto;
   }
 }
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .container_menu {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 25px;
+    margin: 0 20px;
+    justify-items: center;
+  }
+
+  .button_submit {
+    width: 220px;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  .container_menu {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 25px;
+    margin: 0 30px;
+    justify-items: center;
+  }
+
+  .button_submit {
+    width: 300px;
+  }
+}
