--- a/css/header.css
+++ b/css/header.css
@@ -10,7 +10,7 @@ body {
   width: 100%;
   height: 50px;
   position: fixed;
-  box-shadow: 0px 7px 8px -8px #cdc9c3;
+  box-shadow: 0px 7px 8px -8px #f3bad6;
 }
 
 .header img {
