--- a/css/style_position.css
+++ b/css/style_position.css
@@ -4,14 +4,17 @@
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 5px;
   font-family: "Lato", sans-serif;
-  width: 550px;
   float: left;
-  padding: 75px 0 0 5%;
-  padding-bottom: 10px;
+  padding-top: 75px;
+  margin: 0 55px;
+}
+
+.wrapper-content {
+  margin: 0 15%;
 }
 
 .container-position {
-  background: rgb(255, 115, 0);
+  background: #28df99;
   width: 180px;
   height: 180px;
   position: relative;
@@ -30,27 +33,37 @@
 .element-position-1,
 .element-position-2,
 .element-position-3 {
-  background: rgb(26, 41, 248);
+  background: #ef4f4f;
   position: absolute;
 }
 
 .element-position-4,
 .element-position-5,
 .element-position-6 {
-  background: rgb(228, 39, 196);
+  background: #944e6c;
   position: absolute;
 }
 
 .element-position-7,
 .element-position-8,
 .element-position-9 {
-  background: rgb(32, 192, 192);
+  background: #83a95c;
   position: absolute;
 }
 
 /* Grid position end */
+.wrapper-end {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 5px;
+  font-family: "Lato", sans-serif;
+  float: left;
+  padding-top: 75px;
+  margin: 0 55px;
+}
+
 .container-position-end {
-  background: rgb(50, 160, 28);
+  background: #ff8585;
   width: 180px;
   height: 180px;
   position: relative;
@@ -68,14 +81,14 @@
 }
 
 .element-position-one {
-  background: rgb(236, 47, 142);
+  background: #9f5f80;
   position: absolute;
   left: 0;
   top: 0;
 }
 
 .element-position-two {
-  background: rgb(236, 47, 142);
+  background: #9f5f80;
   position: absolute;
   left: 0;
   top: 50%;
@@ -83,7 +96,7 @@
 }
 
 .element-position-three {
-  background: rgb(236, 47, 142);
+  background: #9f5f80;
   position: absolute;
   left: 0;
   top: 100%;
@@ -91,14 +104,14 @@
 }
 
 .element-position-four {
-  background: tomato;
+  background: #b34180;
   position: absolute;
   left: 50%;
   transform: translate(-50%, 0);
 }
 
 .element-position-five {
-  background: tomato;
+  background: #b34180;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -106,7 +119,7 @@
 }
 
 .element-position-six {
-  background: tomato;
+  background: #b34180;
   position: absolute;
   left: 50%;
   top: 100%;
@@ -114,14 +127,14 @@
 }
 
 .element-position-seven {
-  background: rgb(111, 31, 216);
+  background: #9c3d54;
   position: absolute;
   left: 100%;
   transform: translate(-100%, 0);
 }
 
 .element-position-eight {
-  background: rgb(111, 31, 216);
+  background: #9c3d54;
   position: absolute;
   left: 100%;
   top: 50%;
@@ -129,7 +142,7 @@
 }
 
 .element-position-nine {
-  background: rgb(111, 31, 216);
+  background: #9c3d54;
   position: absolute;
   left: 100%;
   top: 100%;
@@ -141,12 +154,47 @@
     justify-content: center;
     justify-items: center;
     font-size: 14px;
-    margin: 0 10px;
-    width: min-content;
+    float: none;
   }
+
+  .wrapper-end {
+    justify-content: center;
+    justify-items: center;
+    font-size: 14px;
+    float: none;
+    padding-top: 45px;
+    margin: 0 35px;
+  }
+
+  .wrapper-content {
+    margin: 0;
+  }
+
   .container-position,
   .container-position-end {
     width: 100px;
     height: 100px;
   }
+
+  .element {
+    width: 50px;
+    height: 50px;
+  }
+
+  .element-position {
+    width: 50px;
+    height: 50px;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+}
+
+@media (min-width: 992px) and (max-width: 1199.98px) {
+}
+
+@media (min-width: 1200px) and (max-width: 1899.98px) {
 }
